Remove unused packages, bump versions to remove vulnerabilities
Signed-off-by: Mikael Mello <git@mikaelmello.com>

--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "web_dispatcher",
+  "name": "dispatcher-master",
   "version": "1.0.0",
   "description": "Web Dispatcher",
   "main": "app.js",
   "scripts": {
     "lint": "esw *.js database servers --color",
     "test": "npm run lint",
-    "build": "npm run copy-config && tsc",
+    "build": "tsc && npm run copy-config",
     "dev": "tsnd --watch --ignore-watch node_modules --respawn src/app.ts",
     "copy-config": "copyfiles -u 3 src/servers/config/config.json dist/servers/config/"
   },
   "keywords": [
     "dispatcher"
   ],
-  "author": "Matheus Medeiros Sarmento",
+  "contributors": [
+    {
+      "name": "Matheus Medeiros Sarmento"
+    },
+    {
+      "name": "Mikael Mello"
+    }
+  ],
   "license": "BSD-2-Clause",
   "dependencies": {
     "@types/archiver": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express-http-proxy": "^1.5.12",
-    "@types/express-session": "^1.15.14",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/json2csv": "^4.5.0",
     "@types/jsonwebtoken": "^8.3.4",
@@ -30,59 +35,30 @@
     "@types/multer": "^1.3.10",
     "@types/node": "^12.7.5",
     "@types/nodemailer": "^6.2.1",
-    "@types/passport": "^1.0.1",
-    "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.4",
     "@types/tmp": "^0.1.0",
-    "@types/uuid": "^3.4.5",
     "archiver": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "~3.5.0",
     "body-parser": "^1.17.1",
-    "chart.js": "^2.5.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
-    "copyfiles": "^2.1.1",
-    "datatables": "^1.10.13",
     "dispatcher-protocol": "^4.0.0",
-    "ejs": "~2.5.6",
-    "express": "^4.15.5",
-    "express-fileupload": "^0.1.4",
-    "express-session": "^1.15.4",
-    "express-validator": "^3.2.1",
-    "font-awesome": "^4.7.0",
-    "formidable": "~1.1.1",
+    "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
-    "ip": "~1.1.5",
-    "jquery": "^3.3.1",
-    "jquery-easing": "0.0.1",
-    "json-2-csv": "^2.1.2",
     "json2csv": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "log4js": "^2.3.4",
+    "log4js": "^6.1.0",
     "mkdirp": "^0.5.1",
-    "mongoose": "^4.11.1",
+    "mongoose": "^5.5.17",
     "multer": "^1.4.2",
-    "node-zip": "^1.1.1",
     "nodemailer": "^4.1.2",
-    "nodemon": "^1.17.1",
-    "parse-data-url": "^0.2.0",
-    "passport": "^0.3.2",
-    "passport-local": "~1.0.0",
-    "popper.js": "^1.12.9",
     "rimraf": "^2.6.2",
     "sanitize-filename": "^1.6.3",
-    "sb-admin-2": "^3.3.8",
     "socket.io": "^2.3.0",
-    "startbootstrap-sb-admin": "^4.0.0",
     "tmp": "0.0.33",
-    "traceback": "^0.3.1",
-    "typescript": "^3.6.3",
-    "uuid": "^3.2.1",
-    "validator": "~8.0.0",
-    "zip-folder": "^1.0.0"
+    "tslib": "^1.10.0",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
